test/static/bad/int-of-string.mly
(* this would lead to overflow, so int_of_string throws an exception. *)

%%
hiphop: { $12345678901234567891 }
