test/static/bad/int-of-string.exp
File "int-of-string.mly", line 4, characters 10-10:
Error: unreasonably large integer.
